--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "utf8",
         "intl"
     ],
-    "homepage": "https://www.abdulmohsen.me",
+    "homepage": "https://blog.m7eesn.com",
     "license": "MIT",
     "authors": [
         {
@@ -19,9 +19,6 @@
         "php": ">=7.4",
         "ext-mbstring": "*"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^9.0"
-    },
     "autoload": {
         "files": [
             "src/helpers.php"
@@ -31,4 +28,3 @@
         }
     }
 }
-
